...
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/gender_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/details_picture_recyclerView" />

            <TextView
                android:id="@+id/species_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="7dp"
                android:padding="5dp"
                android:text="@{item.getAnimal.species}"
                android:textColor="@color/grey"
                android:textSize="17sp"
                app:layout_constraintEnd_toStartOf="@id/gender_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/species_title"
                tools:text="Dog" />

            <!-- NUMBER OF ROOMS -->

...
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/color_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/species_tv" />

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="7dp"
                android:padding="5dp"
                android:text="@{item.getAnimal.animalName}"
                android:textColor="@color/grey"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@id/color_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_title"
                tools:text="Roukka" />

            <TextView
                android:id="@+id/color_title"
...
                android:text="@{item.getAnimal.color}"
                android:textColor="@color/grey"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/name_tv"
                app:layout_constraintTop_toBottomOf="@id/color_title"
                tools:text="Brown/Black" />

            <TextView
                android:id="@+id/breed_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
...
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/date_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_tv" />

            <TextView
                android:id="@+id/breed_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="7dp"
                android:padding="5dp"
                android:text="@{item.getAnimal.breed}"
                android:textColor="@color/grey"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@id/date_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/breed_title"
                tools:text="Bouledogue" />

            <TextView
                android:id="@+id/date_title"
...
                android:text="@string/descriptionDes"
                android:textColor="@color/vertdeau"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/identification_number_tv" />

            <TextView
                android:id="@+id/description_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
...
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_tv" />

            <TextView
                android:id="@+id/location_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
...
