<resources>
    <string name="app_name">LostPet</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="rational">This application need your location to work properly. Please grant the location permission</string>
    <string name="picture_folder_name" translatable="false">"Lost pet pictures"</string>
    <string name="voice_rational">If you want to use the microphone, you need to grant the permission</string>

    <!-- FACEBOOK -->
    <string name="facebook_application_id" translatable="false">279452359867432</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb279452359867432</string>


    <string name="add">Add</string>
    <string name="search">Search</string>

    <!-- Gender -->
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Unknown">Unknown</string>

    <!-- Day Format -->
    <string name="dayFormat" translatable="false">dd.MM.yyyy</string>
    <string name="permission_denied">Permission denied</string>

    <!-- Tutorial -->
    <string name="firstStep">Welcome ! First, take one or more photos of the pet</string>
    <string name="secondStep">If you don\'t know any information of a field, indicate \"Unknown\" or \"None\"</string>
    <string name="finalStep">"Once you have completed all the fields, submit your form"</string>
    <string name="found">Found</string>
    <string name="lost">Lost</string>
    <string name="take_photo_permission">Without your permission this application is unable to take photos. In order to complete this form, you need to take at least one photo of the pet. To do so you must accept the required permission.</string>
    <string name="upload_photo_permission">Without your permission this application is unable to upload photos. In order to complete this form, you need to upload at least one photo of your pet. To do so you must accept the required permission.</string>
    <string name="delete_picture">Delete this picture ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title">Title*</string>
    <string name="species">Species*</string>
    <string name="searchSpecies">Species</string>
    <string name="breed">Breed*</string>
    <string name="searchBreed">Breed</string>
    <string name="animal_name">Pet name</string>
    <string name="color">Color*</string>
    <string name="searchColor">Color</string>
    <string name="found_date">Found date*</string>
    <string name="last_place_you_saw_him">Last place you saw him*</string>
    <string name="identification_number">Identification number</string>
    <string name="phone_number">Phone number*</string>
    <string name="description">Description*</string>
    <string name="submit">Submit</string>
    <string name="media">Media</string>
    <string name="gender">Gender</string>
    <string name="location">Location</string>
    <string name="send_email">Send email</string>
    <string name="call">Call</string>
    <string name="emptylist">this tab is empty, be the first to fill it !</string>
    <string name="blankTitle">Title cannot be blank*</string>
    <string name="blankSpecies">Species cannot be blank*</string>
    <string name="blankBreed">Breed cannot be blank*</string>
    <string name="blankColor">Color cannot be blank*</string>
    <string name="blankDate">Date cannot be blank*</string>
    <string name="blankLocation">Last known location cannot be blank*</string>
    <string name="blankPhone">Phone number cannot be blank*</string>
    <string name="blankDescription">Description cannot be blank*</string>
    <string name="blankPhoto">Don\'t forget the photos !</string>
    <string name="deleted">Successfully removed</string>
    <string name="postal_code">Postal Code</string>
    <string name="added">Successfully added</string>
    <string name="settings">Settings</string>
    <string name="my_posts">My posts</string>
    <string name="lostDate">Lost date*</string>
    <string name="lostDateDes">Lost date</string>
    <string name="titleDes">Title</string>
    <string name="found_dateDes">Found date</string>
    <string name="descriptionDes">Description</string>
    <string name="i_found_a_pet">I found a pet</string>
    <string name="i_lost_my_pet">I lost my pet</string>
    <string name="notification_settings">Notification settings</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="account_settings">Account settings</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account">Delete account</string>
    <string name="confirmation_delete_account">Are you sure that you want to delete your account?</string>
    <string name="error">An error has occurred, try again later.</string>
    <string name="successfully_deleted">Your account has been successfully deleted.</string>
    <string name="log_out">Do you want to log out?</string>
    <string name="successfully_disconnected">You have been successfully disconnected.</string>
    <string name="pick_action">Pick an action</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="cancel">Cancel</string>
    <string name="notification_title">Good news ! A pet has been found !</string>

</resources>
