<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.example.lostpet.viewmodel.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.SettingsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/picture_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@drawable/seagreenbackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/settings_back_arrow"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="35dp"
                android:background="@color/transparent"
                android:padding="20dp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/settings_cardview"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                app:cardCornerRadius="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/settings_back_arrow"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/settings_user_picture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:imageUri="@{item.currentUser.photoUrl}" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/settings_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                android:text="@{item.currentUser.displayName}"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/settings_userEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="Henri bidule" />

            <TextView
                android:id="@+id/settings_userEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="@{item.currentUser.email}"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/settings_username"
                tools:text="blabla@gmail.com" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/account_notification_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/silver_grey"
            android:gravity="start|center"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:text="@string/notification_settings"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/picture_constraint_layout" />

        <TextView
            android:id="@+id/notification_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/enable_notifications"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/account_notification_title" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/notification_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/account_notification_title"
            app:useMaterialThemeColors="true" />

        <TextView
            android:id="@+id/account_settings_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@color/silver_grey"
            android:gravity="start|center"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:text="@string/account_settings"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notification_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_disconnect_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="20dp"
            android:text="@string/sign_out"
            android:textAllCaps="false"
            android:textColor="@color/vertdeau"
            android:textSize="17sp"
            app:icon="@drawable/ic_baseline_highlight_off_24"
            app:iconGravity="textStart"
            app:iconTint="@color/vertdeau"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/account_settings_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_delete_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="20dp"
            android:text="@string/delete_account"
            android:textAllCaps="false"
            android:textColor="@color/red"
            android:textSize="17sp"
            app:icon="@drawable/ic_baseline_delete_forever_24"
            app:iconGravity="textStart"
            app:iconTint="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_disconnect_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>