...
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/searchSpecies"
                app:boxBackgroundColor="@color/silver_grey">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_species_editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@={viewmodel.searchSpecies}"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

...
                android:background="@color/transparent"
                android:src="@drawable/ic_baseline_mic_24" />

        </FrameLayout>

        <TextView
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:background="@color/vertdeau"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/white"
...
